--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ deepface==0.0.79
 opencv-python==4.8.1.78
 Pillow==10.1.0
 numpy==1.24.3
-tensorflow-intel==2.13.0
+tensorflow==2.13.0
 typing-extensions==4.5.0
 beautifulsoup4==4.12.3
